--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,21 @@
     <groupId>com.seven</groupId>
     <artifactId>seven-java</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <name>seven-java</name>
     <description>java基础</description>
 
+    <properties>
+        <seven.common>1.0-SNAPSHOT</seven.common>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.seven.common</groupId>
+            <artifactId>seven-common</artifactId>
+            <version>${seven.common}</version>
+        </dependency>
+    </dependencies>
 
 </project>
